#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package Translator
#------------------------------------------------------------------------

Package author: David A. Schneider

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-02-24
- attempt to address problems with runs from xppf7815 - JIRA issue PSAS-117
  call H5Fflush on master file after external links added and file created.
  call H5Fflush on generally translated files before being closed.
- check for valid dataset id's and group id's before closing.
- close runGroupDir at appropriate point
	
Tag: V00-02-23
- fix bugs in automatic translation files, can't have a # comment character
  on a line with an integer parameter.

Tag: V00-02-22
- make two psana config files for automatic translation, one for standard,
  and one for monitoring (new file is monitoring_translation.cfg). Although 
  one file would work for both, it makes it easier to change one without 
  affecting the other.

Tag: V00-02-21
- updated data/automatic_translation.cfg file for both the online monitoring
  split scan translator, and the normal translator
- updated data/default_psana.cfg - document the unknown_src_ok option
  remove old documentation about batch based split scan

Tag: V00-02-20
- add option to ignore unknown src in src_filter list. JIRA issue PSAS-114
- restore cleanup of newwriter unit test
	
Tag: V00-02-19
- setting option type_filter to exclude psana did not turn off epics. It seems
  that it should. It now turns off epics. If for some reason someone only wants to
  translate EPICS, it will be a hassle to configure, but I don't think anyone is 
  doing that.
	
Tag: V00-02-18
- update to pdsdata 8.2.4 with EvrDataV4 and present function
	
Tag: V00-02-17
- improved fastindex. Remember where previous calib cycle was for each stream to 